--- a/lexilla/src/Lexilla.vcxproj
+++ b/lexilla/src/Lexilla.vcxproj
@@ -87,13 +87,39 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\lexers\*.cxx" />
-    <ClCompile Include="..\lexlib\*.cxx" />
+    <ClCompile Include="..\lexers\LexCPP.cxx" />
+    <ClCompile Include="..\lexlib\Accessor.cxx" />
+    <ClCompile Include="..\lexlib\CharacterCategory.cxx" />
+    <ClCompile Include="..\lexlib\CharacterSet.cxx" />
+    <ClCompile Include="..\lexlib\DefaultLexer.cxx" />
+    <ClCompile Include="..\lexlib\LexerBase.cxx" />
+    <ClCompile Include="..\lexlib\LexerModule.cxx" />
+    <ClCompile Include="..\lexlib\LexerNoExceptions.cxx" />
+    <ClCompile Include="..\lexlib\LexerSimple.cxx" />
+    <ClCompile Include="..\lexlib\PropSetSimple.cxx" />
+    <ClCompile Include="..\lexlib\StyleContext.cxx" />
+    <ClCompile Include="..\lexlib\WordList.cxx" />
     <ClCompile Include="Lexilla.cxx" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\SciLexer.h" />
-    <ClInclude Include="..\lexlib\*.h" />
+    <ClInclude Include="..\lexlib\Accessor.h" />
+    <ClInclude Include="..\lexlib\CatalogueModules.h" />
+    <ClInclude Include="..\lexlib\CharacterCategory.h" />
+    <ClInclude Include="..\lexlib\CharacterSet.h" />
+    <ClInclude Include="..\lexlib\DefaultLexer.h" />
+    <ClInclude Include="..\lexlib\LexAccessor.h" />
+    <ClInclude Include="..\lexlib\LexerBase.h" />
+    <ClInclude Include="..\lexlib\LexerModule.h" />
+    <ClInclude Include="..\lexlib\LexerNoExceptions.h" />
+    <ClInclude Include="..\lexlib\LexerSimple.h" />
+    <ClInclude Include="..\lexlib\OptionSet.h" />
+    <ClInclude Include="..\lexlib\PropSetSimple.h" />
+    <ClInclude Include="..\lexlib\SparseState.h" />
+    <ClInclude Include="..\lexlib\StringCopy.h" />
+    <ClInclude Include="..\lexlib\StyleContext.h" />
+    <ClInclude Include="..\lexlib\SubStyles.h" />
+    <ClInclude Include="..\lexlib\WordList.h" />
     <ClInclude Include="Lexilla.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
